man_u파일 오류수정

--- a/man_u.yml
+++ b/man_u.yml
@@ -3,7 +3,8 @@ team: 맨체스터 유나이티드 FC
 manager: 루벤 아모림
 
 members:
--조슈아 지르크제이
--마테우스 쿠냐
--아마드 디알로
+#  manu오류 수정
+  -조슈아 지르크제이
+  -마테우스 쿠냐
+  -아마드 디알로
         
